<resources>
    <string name="app_name">Comp 3350</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="not_registered">Not Registered?</string>
    <string name="register">Sign Up</string>
    <string name="user_email">email address</string>
    <string name="confirm_password">confirm password</string>
    <string name="done_registration">Done</string>
    <string name="gender">Gender?</string>
    <string-array name="workouts">
        <item>Tone up</item>
        <item>Build muscle</item>
        <item>Loose fat</item>
    </string-array>
    <string-array name="veg">
        <item>--Select--</item>
        <item>3100 calories</item>
        <item>2600 calories</item>
        <item>2300 calories</item>
        <item>1900 calories</item>
    </string-array>
    <string-array name="nonVeg">
        <item>--Select--</item>
        <item>3100 calories</item>
        <item>2600 calories</item>
        <item>2200 calories</item>
        <item>1800 calories</item>
    </string-array>
    <string name="gender_select">Please select your gender:</string>
    <string name="workout_select">Please select a workout:</string>
    <string name="next">Get your workout suggestion</string>
    <string name="thrive_logo">thrive_logo</string>
    <string name="hrive">hrive</string>
    <string name="registration">Registration</string>
    <string name="background_pattern">background pattern</string>
    <string name="welcome_to_thrive">Welcome to Thrive!</string>
    <string name="let_s_get_you_started_with_some_basic_information">Let\'s get you started with some basic information.</string>
    <string name="age">age</string>
    <string name="how_old_are_you">How old are you?</string>
    <string name="weight_lbs">Weight (lbs)</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="height_cm">Height (cm)</string>
    <string name="please_enter_all_of_the_entries_below">Please enter all of the entries below.</string>
    <string name="email_address">email address</string>
    <string name="todo">TODO</string>
    <string name="Thrive">Thrive</string>
    <string name="my_dashboard">My Dashboard</string>
    <string name="my_bmi">My BMI</string>
    <string name="meal_plan">Meal Plan</string>
    <string name="blood_optimizer">Blood Optimizer</string>
    <string name="dashboard_workout">dashboard-workout</string>
    <string name="dashboard_meal">dashboard-meal</string>
    <string name="dashboard_bmi">dashboard-bmi</string>
    <string name="dashboard_blood">dashboard-blood</string>
    <string name="custom_your_info">Custom your weight or height if needed:</string>
    <string name="weight">weight (pounds)</string>
    <string name="height">height (cm)</string>
    <string name="pounds">pounds</string>
    <string name="cm">cm</string>
    <string name="calculate">calculate</string>
    <string name="calculate_data">Calculate using your personal data</string>
    <string name="text_view">TextView</string>
    <string name="your_height">Your height:</string>
    <string name="your_weight">Your weight:</string>
    <string name="your_bmi_result_is">Your BMI result is:</string>
    <string name="if_you_leave_this_empty_your_bmi_result_is_based_on_your_personal_data">If you leave the row empty, your result will be calculated based on given information in your profile.</string>
    <string name="select_activity_level">Please select your activity level:</string>
    <string-array name="activity_level">
        <item>Barely active</item>
        <item>Active</item>
        <item>Highly active</item>
    </string-array>
    <string name="calories_message">\t\t\t\t\t\t\t\t\tCalories/day is needed to maintain your current body composition.</string>
    <string name="blood_optimizer_text">Blood Optimizer</string>
    <string name="blood_optimizer_results">Blood Optimizer - Results</string>
    <string name="flags">Flags</string>
    <string name="_150_600">150 – 600</string>
    <string name="_4_0_5_4">4.0 – 5.4</string>
    <string name="results">Results</string>
    <string name="nmol_l">nmol/L</string>
    <string name="_36_48">36–48</string>
    <string name="mg">mg</string>
    <string name="mmol_l">mmol/L</string>
    <string name="see_suggestions">See suggestions</string>
    <string name="percent">%</string>
    <string name="_0_5_2_3">0.5 – 2.3</string>
    <string name="units">Units</string>
    <string name="reference_range">Reference Range</string>
    <string name="miu_l">miU/L</string>
    <string name="glucose">Glucose</string>
    <string name="tsh">TSH</string>
    <string name="cortisol">Cortisol</string>
    <string name="creatinine">Creatinine</string>
    <string name="iron">Iron</string>
    <string name="testosterone">Testosterone</string>
    <string name="estradiol">Estradiol</string>
    <string name="blood_optimizer_self_check">Blood Optimizer Self Check</string>
    <string name="blood_optimizer_analyzation">Blood Optimizer - Analyzation</string>
    <string name="please_enter_the_blood_markers_you_have_in_hand">Please enter the blood markers you have in hand.</string>
    <string name="estradiol_female">Estradiol (Female)</string>
    <string name="ng_dl">ng/DL</string>
    <string name="see_result">See Result</string>
    <string name="gender_specific_section">Gender Specific Section</string>
    <string name="testosterone_male">Testosterone (Male)</string>
    <string name="general_suggestion">General suggestion</string>
    <string name="lower_than_normal_range_related_symptoms">Lower than normal range - related symptoms:</string>
    <string name="higher_than_normal_range_related_symptoms">Higher than normal range - related symptoms:</string>
    <string name="_23">23</string>
    <string name="_172">172</string>
    <string name="_130">130</string>
    <string name="your_wellness_result">Your Wellness Result</string>
    <string name="tshGeneral">TSH, also referred to as Thyroid-Stimulating Hormone, is a pituitary
        hormone that stimulates the thyroid gland, which is responsible for the metabolism of almost
        every tissue is in the body.</string>
    <string name="tshLowSymptoms">If you are experiencing any symptoms including increased sensitivity
        to cold, weight gain, heavier than normal or irregular menstrual periods(women) or fatigue,
        check out Thrives low TSH balancing strategies.</string>
    <string name="tshHighSymptoms">If you are experiencing any symptoms including increased sensitivity
        to cold, weight gain, heavier than normal or irregular menstrual periods(women) or fatigue,
        check out Thrive\'s low TSH balancing strategies.</string>
    <string name="cortisolGeneral">Cortisol is the primary stress hormone in the human body. </string>
    <string name="cortisolLowSymptoms">Extremely low levels of cortisol can lead to something known
        as Addison\'s disease, which is rather uncommon. Symptoms can range from darkening of the skin,
        hair loss, sexual dysfunction in women, low blood sugar levels and extreme weight loss.
        This condition because of its novelty is only treated by healthcare professionals however
        there are some immediate steps you can take mentioned in Thrive\'s low cortisol recommendations.</string>
    <string name="cortisolHighSymptoms">If you are experiencing symptoms including muscle weakness,
        unmanageable fatigue, difficulty concentrating or weight gain (bloating), there is a very
        high chance you have stressed yourself out and have elevated levels of cortisol in your body.
        Check out Thrive\'s high cortisol recommendations.</string>
    <string name="creatinineGeneral">Creatinine is a byproduct of the bodies metabolic activities
        and can be used to accurately gauge ones kidney function.</string>
    <string name="creatinineLowSymptoms">The more uncommon problem of having low creatinine levels
        can result in symptoms of various other diseases such as a muscle disease causing muscle
        weakness, atrophying muscles or liver diseases causing jaundice and abnormal stools.</string>
    <string name="creatinineHighSymptoms">If you are experiencing any of the following symptoms
        including urination issues, muscle cramp, chest pain, increase in thirst or heavy fatigue.
        Check out Thrive\'s high creatinine remedies.</string>
    <string name="glucoseGeneral">Blood glucose is a sugar that the bloodstream carries to all cells
        in the body to supply energy. These levels can accurately indicate any chance of diabetes or
        increased insulin sensitivity. </string>
    <string name="glucoseLowSymptoms">On the other hand if you experience extreme sweating,
        irritability, increase in hunger, nervousness, weakness and anxiety, this could imply you
        are experiencing low blood glucose levels. </string>
    <string name="glucoseHighSymptoms">If you are experiencing any of the following symptoms including
        a very dry mouth, extreme thirst, light headedness, a fast heart beat followed with a weak pulse,
        read Thrive\'s high blood glucose recommendation\'s. </string>
    <string name="ironGeneral">Iron is an essential element for blood production. It is also essential
        for oxygen distribution in the body.</string>
    <string name="ironLowSymptoms">If you are experiencing any of the following symptoms including
        getting pale, lack of energy, shortness of breath, rapid heartbeat and extreme fatigue,
        check out Thrives low Iron recommendations.</string>
    <string name="ironHighSymptoms">If you are experiencing any of the following symptoms including
        getting pale, lack of energy, shortness of breath, rapid heartbeat and extreme fatigue,
        check out Thrive\'s high Iron recommendations.</string>
    <string name="testGeneral">Testosterone is one of the most vital sexual hormones, specifically
        for males. It regulates to a large context much of men\'s sexual function, mood stability,
        body composition and bone mass.</string>
    <string name="testLowSymptoms">As a healthy male if you are having any symptoms of low testosterone
        levels including lack of appetite, decrease in sexual libido, worse body fat distribution and
        depression. If you find yourself with such symptoms, check out Thrive\'s testosterone balancing
        strategies below.</string>
    <string name="testHighSymptoms">High testosterone usually has no negative implications but in extreme
        cases of high testosterone we can see an acceleration of the maturing of male specific characteristics
        or an increase in DHT levels which might be causing rapid hair changes or even hair loss.</string>
    <string name="estradiolGeneral">Estradiol, also referred to as estrogen, is one of the most vital
        sexual hormone for women. It regulates to a large context much of women\'s sexual function /
        development, metabolism of important metabolites, insulin sensitivity and body composition. </string>
    <string name="estradiolLowSymptoms">As a healthy women if you are having irregular periods,
        hot flashes, mood swings, fatigue or depression, check out Thrive\'s low estrogen balancing
        approach below.</string>
    <string name="estradiolHighSymptoms">n the other hand experiencing symptoms such as bloating,
        cold hands and feet, low sex drive and hair loss can point towards high estrogen, check out
        Thrive\'s high estrogen balancing approach below.</string>
    <string name="no_suggestion">NO SUGGESTION</string>
</resources>