<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4DF89945"
    tools:context=".UI.BloodMarkerAnalyzer">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="16dp"
            android:text="@string/blood_optimizer_analyzation"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/please_enter_the_blood_markers_you_have_in_hand"
            android:textAllCaps="false"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="72dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/tsh"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editTextNumberDecimal"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_marginStart="120dp"
            android:layout_marginTop="-25dp"
            android:ems="10"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/textView26"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="200dp"
            android:layout_marginTop="-25dp"
            android:text="@string/miu_l" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="72dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/cortisol"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="200dp"
            android:layout_marginTop="-25dp"
            android:text="@string/nmol_l" />

        <EditText
            android:id="@+id/editTextNumberDecimal2"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_marginStart="120dp"
            android:layout_marginTop="-23dp"
            android:ems="10"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="72dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/creatinine"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editTextNumberDecimal3"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_marginStart="120dp"
            android:layout_marginTop="-25dp"
            android:ems="10"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/textView28"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="200dp"
            android:layout_marginTop="-25dp"
            android:text="@string/mg" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="72dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/glucose"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView27"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="200dp"
            android:layout_marginTop="-25dp"
            android:text="@string/mmol_l" />

        <EditText
            android:id="@+id/editTextNumberDecimal4"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_marginStart="120dp"
            android:layout_marginTop="-23dp"
            android:ems="10"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="72dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/iron"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView29"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="200dp"
            android:layout_marginTop="-25dp"
            android:text="@string/percent" />

        <EditText
            android:id="@+id/editTextNumberDecimal5"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_marginStart="120dp"
            android:layout_marginTop="-25dp"
            android:ems="10"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:text="@string/gender_specific_section"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/testosterone_male"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editTextNumberDecimal6"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_marginStart="190dp"
            android:layout_marginTop="-25dp"
            android:ems="10"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/textView31"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="270dp"
            android:layout_marginTop="-25dp"
            android:text="@string/ng_dl" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/estradiol_female"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="270dp"
            android:layout_marginTop="-25dp"
            android:text="@string/ng_dl" />

        <EditText
            android:id="@+id/editTextNumberDecimal7"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_marginStart="190dp"
            android:layout_marginTop="-25dp"
            android:ems="10"
            android:inputType="numberDecimal" />

        <Button
            android:id="@+id/button_BloodResult"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/see_result"
            android:textColor="#FFFFFF" />
    </LinearLayout>

</ScrollView>